--- a/luz_e_cena/package.json
+++ b/luz_e_cena/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
